@@ -1,48 +1,0 @@
-<?php
-/**
- * Language labels for module "infomodule"
- *
- * This file is detected by the translation tool.
- */
-
-$LOCAL_LANG = Array(
-	"default" => Array(
-		"title" => "Static File Cache",
-	),
-	"dk"      => Array(),
-	"de"      => Array(),
-	"no"      => Array(),
-	"it"      => Array(),
-	"fr"      => Array(),
-	"es"      => Array(),
-	"nl"      => Array(),
-	"cz"      => Array(),
-	"pl"      => Array(),
-	"si"      => Array(),
-	"fi"      => Array(),
-	"tr"      => Array(),
-	"se"      => Array(),
-	"pt"      => Array(),
-	"ru"      => Array(),
-	"ro"      => Array(),
-	"ch"      => Array(),
-	"sk"      => Array(),
-	"lt"      => Array(),
-	"is"      => Array(),
-	"hr"      => Array(),
-	"hu"      => Array(),
-	"gl"      => Array(),
-	"th"      => Array(),
-	"gr"      => Array(),
-	"hk"      => Array(),
-	"eu"      => Array(),
-	"bg"      => Array(),
-	"br"      => Array(),
-	"et"      => Array(),
-	"ar"      => Array(),
-	"he"      => Array(),
-	"ua"      => Array(),
-	"lv"      => Array(),
-	"jp"      => Array(),
-	"vn"      => Array(),
-);
